# data-structures-c

./: .gitignore  main.c
double_linked_list/: double_linked_list.c  double_linked_list.h
linked_list/: linked_list.c  linked_list.h
p1Np2/: CMakeLists.txt  a.out  main
p1Np2/athletes/: a.out  main.c
p1Np2/biggestFromRangeRead/: a.out  main.c
p1Np2/binary_search/: binary_search.c  binary_search.h
p1Np2/birthYear/: a.out  main.c
p1Np2/mergeSort/: a.out  main.c
p1Np2/pointersArray/: a.out  main.c
p1Np2/productTax/: a.out  main.c
p1Np2/rectangle/: main.c
p1Np2/studentScoreMatrix/: a.out  main.c  sonnetExample.c
p1Np2/totalUniqueValuesInVec/: a.out  main.c
test/: verify_linked_list.c  verify_linked_list.h
