cmake_minimum_required(VERSION 3.29)
project(algprog2 C)

set(CMAKE_C_STANDARD 11)

add_executable(algprog2
    mergeSort/main.c
        birthYear/main.c
        productTax/main.c
        productTax/main.c
        productTax/main.c
        biggestFromRangeRead/main.c
        totalUniqueValuesInVec/main.c
        studentScoreMatrix/main.c
        athletes/main.c
        rectangle/main.c
        studentScoreMatrix/sonnetExample.c
        pointersArray/main.c
        binary_search/binary_search.c
        binary_search/binary_search.h
        binary_search/binary_search.h)
